fix: baseurl para root domain

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <nav class="navbar">
   <div class="container nav-content">
-    <a href="/" class="logo">GC.</a>
+    <a href="{{ site.baseurl }}/" class="logo">GC.</a>
     <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="/#sobre">Sobre</a></li>
-      <li><a href="/projects.html">Projetos</a></li>
-      <li><a href="/blog.html">Blog</a></li>
+      <li><a href="{{ site.baseurl }}/">Home</a></li>
+      <li><a href="{{ site.baseurl }}/#sobre">Sobre</a></li>
+      <li><a href="{{ site.baseurl }}/projects.html">Projetos</a></li>
+      <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
     </ul>
   </div>
 </nav>
