--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | Guilherme Cavalheri</title>
     <meta name="description" content="{{ page.excerpt }}">
-    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/images/favicon.svg">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="post-footer">
-                <a href="/blog.html" class="btn-back">
+                <a href="{{ site.baseurl }}/blog.html" class="btn-back">
                     <i class="fas fa-arrow-left"></i> Voltar para o Blog
                 </a>
             </div>
